force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Health Alert</label>
    <nameField>
        <displayFormat>ALRT-{0000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>