force-app/main/default/objects/Alert__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Limits</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>