force-app/main/default/objects/Alert__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>