force-app/main/default/objects/Alert__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <description>Unique hash to prevent duplicate alerts for the same issue.</description>
    <externalId>true</externalId>
    <label>Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>