force-app/main/default/objects/Alert__c/fields/Last_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Last_Occurrence__c</fullName>
    <description>Timestamp of the most recent occurrence of this alert.</description>
    <label>Last Occurrence</label>
    <type>DateTime</type>
</CustomField>