force-app/main/default/objects/Alert__c/fields/Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Occurrence Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>