force-app/main/default/objects/Alert__c/fields/Resolution_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Guidance__c</fullName>
    <label>Resolution Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>