force-app/main/default/objects/Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Severity__c</columns>
    <columns>Message__c</columns>
    <columns>Status__c</columns>
    <columns>Occurrence_Count__c</columns>
    <columns>Last_Occurrence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>